added tests; re-wrote Makefile system; theta now has a progressbar

--- a/bin/Makefile
+++ b/bin/Makefile
@@ -1,15 +1,13 @@
 include ../Makefile.rules
 
-#sources = $(wildcard *.cpp)
-#exes = $(patsubst %.cpp,%.exe,$(sources))
-
 all: merge theta
 
 merge: merge.o
-	$(LINK_EXE) -o $@ $<
+	@$(LINK_EXE) -o $@ $<
 
 theta: theta.o
-	$(LINK_EXE) -o $@ $<
+	@$(LINK_EXE) -o $@ $<
 
-#	$(LINK_EXE) -o $@ $+
+clean-subdir:
+	@rm -f merge theta
 
