--- a/examples/gaussoverflat.cfg
+++ b/examples/gaussoverflat.cfg
@@ -81,7 +81,7 @@ myminuit = {
    type = "root-minuit";
 };
 
-toy-run = {
+main = {
    type = "plain";
    
    //model to use for pseudo data generation and to pass to the producers:
@@ -91,7 +91,7 @@ toy-run = {
    producers = ("hypotest");
 
    //number of PE to run
-   n-events = 5000;
+   n-events = 200;
    
    result-file = "result.sqlite3";
 };
