--- a/liblbfgs/Makefile
+++ b/liblbfgs/Makefile
@@ -5,4 +5,7 @@ objects = lbfgs.o
 all: ../lib/liblbfgs.so
 
 ../lib/liblbfgs.so: $(objects)
-	$(CC) -o $@ -shared $(objects)
+	@$(CC) -o $@ -shared $(objects)
+
+clean-subdir:
+	@rm -f ../lib/liblbfgs.so
