--- a/src/Makefile
+++ b/src/Makefile
@@ -6,5 +6,8 @@ libobjects = $(patsubst %.cpp,%.o,$(libsources))
 all: ../lib/libtheta.so
 
 ../lib/libtheta.so: $(libobjects)
-	$(LINK_SO) -o $@ $+
+	@$(LINK_SO) -o $@ $+
+
+clean-subdir:
+	@rm -f ../lib/libtheta.so
 
