--- a/Makefile.rules
+++ b/Makefile.rules
@@ -15,30 +15,30 @@ EXTRA_LINK_EXE =
 EXTRA_LINK_SO =
 
 #use these to compile:
-COMPILE = $(CC) -c -Wall -Wextra -Wno-long-long -Wno-unused-parameter -fPIC -O3 $(INCLUDES) $(EXTRA_COMPILE)
+COMPILE = echo compiling $<; $(CC) -c -Wall -fPIC -O3 $(INCLUDES) $(EXTRA_COMPILE)
 
 #use LIBS to link any executable
-LINK_EXE = $(CC) -L../lib -ldl -ltheta -llbfgs -lconfig -lsqlite3 $(SQLITE_LIBS) $(BOOST_LIBS) $(EXTRA_LINK_EXE)
+LINK_EXE = echo linking $@; $(CC) -L../lib -ldl -ltheta -llbfgs -lconfig -lsqlite3 $(SQLITE_LIBS) $(BOOST_LIBS) $(EXTRA_LINK_EXE)
 
 #use SHARED to link any .so file
 #"-rdynamic" required for correct handling of exceptions
-LINK_SO = $(CC) -shared -rdynamic $(EXTRA_LINK_SO)
+LINK_SO = echo linking $@; $(CC) -shared -rdynamic $(EXTRA_LINK_SO)
 
 %.o: %.cpp
-	$(COMPILE) -o $@ $<
+	@$(COMPILE) -o $@ $<
 
 %.o: %.cxx
-	$(COMPILE) -o $@ $<
+	@$(COMPILE) -o $@ $<
 
 %.o: %.c
-	$(COMPILE) -x c -o $@ $<
+	@$(COMPILE) -x c -o $@ $<
 
 #redirect to "all" target which is defined in each of the subdirs
 a: all
 
-clean:
-	rm -f *.o
+#make clean rule depend on subdir-specific:
+clean: clean-subdir
+	@rm -f *.o
 
-
-.PHONY: clean
+.PHONY: clean clean-subdir
 
