--- a/plugins/Makefile
+++ b/plugins/Makefile
@@ -6,4 +6,8 @@ libobjects = $(patsubst %.cpp,%.o,$(libsources))
 all: ../lib/core-plugins.so
 
 ../lib/core-plugins.so: $(libobjects)
-	$(LINK_SO) -o $@ $+
+	@$(LINK_SO) -o $@ $+
+
+
+clean-subdir:
+	@rm -f ../lib/core-plugins.so
