fixed some typos

--- a/examples/CountingExp.cfg
+++ b/examples/CountingExp.cfg
@@ -122,9 +122,6 @@ countingExp = {
 
 };
 
-
-
-
 //generate likelihood ratio test statistics by minimizing all
 // but the specified parameters (which are fixed) and saving the ratio as result.
 hypotest = {
@@ -138,10 +135,7 @@ myminuit = {
    type = "root-minuit";
 };
 
-
-
-
-toy-run = {
+main = {
    type = "plain";
    
    //model to use for pseudo data generation and to pass to the producers:
@@ -156,11 +150,8 @@ toy-run = {
    //set the random seed
    seed     = 10815;
    
-   result-file = "result/abcd.db";
-
+   result-file = "b-only.db";
 };
-
-
 
 plugins = {
   files = ("lib/core-plugins.so", "lib/root.so");
