--- a/examples/gaussoverflat.cfg
+++ b/examples/gaussoverflat.cfg
@@ -91,9 +91,9 @@ main = {
    producers = ("hypotest");
 
    //number of PE to run
-   n-events = 200;
+   n-events = 500;
    
-   result-file = "result.sqlite3";
+   result-file = "gaussoverflat-result.db";
 };
 
 plugins = {
