making 1d gaussian constraint easier

--- a/examples/gaussoverflat-include.cfg
+++ b/examples/gaussoverflat-include.cfg
@@ -57,14 +57,10 @@ gaussoverflat = {
 
     constraints = {
         c = { // the name "c" can be chosen at will
-            //multivariate gaussian:
             type = "gauss";
-            // list of parameters the gaussian depends on:
-            parameters = ("b");
-            // means (same order as parameters)
-            mean = [1000.0];
-            // covariance matrix as list of arrays, i.e. 3x3 matrix = ([],[],[]):
-            covariance = ([40000.0]);
+            parameter = "b";
+            mean = 1000.0;
+            width = 200.0;
         };
     };
 };
