--- a/root/Makefile
+++ b/root/Makefile
@@ -1,5 +1,11 @@
 include ../Makefile.rules
 
+ifeq ($(shell which root-config),)
+all:
+		@echo -e \\nNOTE: no root-config found. Not building root-dependent stuff.\\n
+
+else
+
 EXTRA_COMPILE := $(shell root-config --cflags)
 EXTRA_LINK_SO := $(shell root-config --libs) -lMinuit2 $(shell root-config --ldflags)
 EXTRA_LINK_EXE := $(EXTRA_LINK_SO)
@@ -18,4 +24,4 @@ histos: histos.o
 clean-subdir:
 	@rm -f histos ../lib/root.so
 
-
+endif
