* re-worked whole plugin system to make it easier to use and usually use C++ class names as type="..." settings  * more documentation

--- a/examples/CountingExp-include.cfg
+++ b/examples/CountingExp-include.cfg
@@ -29,7 +29,7 @@ countingExp = {
         signal = { // "signal" is a name you can choose freely here
             coefficients = ("s");
             histogram = {
-                type = "fixed-poly";
+                type = "fixed_poly";
                 observable = "NEvts";
                 normalize_to = 1.0;
 		coefficients = [1.0];
@@ -39,7 +39,7 @@ countingExp = {
         bkg_1 = {
             coefficients = ("b_1");
             histogram = {
-                type = "fixed-poly";
+                type = "fixed_poly";
                 observable = "NEvts";
                 normalize_to = 1.0;
                 coefficients = [1.0];
@@ -49,7 +49,7 @@ countingExp = {
         bkg_2 = {
             coefficients = ("b_2");
             histogram = {
-                type = "fixed-poly";
+                type = "fixed_poly";
                 observable = "NEvts";
                 normalize_to = 1.0;
                 coefficients = [1.0];
