--- a/examples/gaussoverflat-include.cfg
+++ b/examples/gaussoverflat-include.cfg
@@ -29,7 +29,7 @@ gaussoverflat = {
         signal = { // "signal" is a name you can choose freely here
             coefficients = ("s");
             histogram = {
-                type = "fixed-gauss";
+                type = "fixed_gauss";
                 // In this case, we need to specify the observable here again,
                 // as this defines the range and binning of the histogram (and
                 // the configuration of the histogram works exactly the same
@@ -47,7 +47,7 @@ gaussoverflat = {
         bkg = {
             coefficients = ("b");
             histogram = {
-                type = "fixed-poly";
+                type = "fixed_poly";
                 observable = "mass";
                 normalize_to = 1.0;
                 //coefficients of the polynomial, starting with x^0
