--- a/examples/gaussoverflat-mle.cfg
+++ b/examples/gaussoverflat-mle.cfg
@@ -1,7 +1,7 @@
 @include "gaussoverflat-include.cfg"
 
 mle = {
-    type = "maximum-likelihood";
+    type = "mle";
 
     //use minuit as minimizer and source of errors:
     minimizer = "myminuit";
@@ -11,11 +11,11 @@ mle = {
 };
 
 myminuit = {
-   type = "root-minuit";
+   type = "root_minuit";
 };
 
 main = {
-   type = "plain";
+   type = "plain_run";
    model = "gaussoverflat";
    producers = ("mle");
    n-events = 500;
