--- a/examples/CountingExp.cfg
+++ b/examples/CountingExp.cfg
@@ -3,18 +3,18 @@
 //generate likelihood ratio test statistics by minimizing all
 // but the specified parameters (which are fixed) and saving the ratio as result.
 hypotest = {
-    type = "deltanll-hypotest";
+    type = "deltanll_hypotest";
     minimizer = "myminuit";
     background-only = {s = 0.0;};
     signal-plus-background = {};
 };
 
 myminuit = {
-   type = "root-minuit";
+   type = "root_minuit";
 };
 
 main = {
-   type = "plain";
+   type = "plain_run";
    
    //model to use for pseudo data generation and to pass to the producers:
    model = "countingExp";
