--- a/examples/gaussoverflat.cfg
+++ b/examples/gaussoverflat.cfg
@@ -26,7 +26,7 @@ gaussoverflat = {
         signal = { // "signal" is a name you can choose freely here
             coefficients = ("s");
             histogram = {
-                type = "fixed-gauss";
+                type = "fixed_gauss";
                 // In this case, we need to specify the observable here again,
                 // as this defines the range and binning of the histogram (and
                 // the configuration of the histogram works exactly the same
@@ -44,7 +44,7 @@ gaussoverflat = {
         bkg = {
             coefficients = ("b");
             histogram = {
-                type = "fixed-poly";
+                type = "fixed_poly";
                 observable = "mass";
                 normalize_to = 1.0;
                 //coefficients of the polynomial, starting with x^0
@@ -58,11 +58,11 @@ gaussoverflat = {
             //multivariate gaussian:
             type = "gauss";
             // list of parameters the gaussian depends on:
-            parameters = ("b");
+            parameter = "b";
             // means (same order as parameters)
-            mean = [1000.0];
+            mean = 1000.0;
             // covariance matrix as list of arrays, i.e. 3x3 matrix = ([],[],[]):
-            covariance = ([40000.0]);
+            width = 200.0;
         };
     };
 };
@@ -70,18 +70,18 @@ gaussoverflat = {
 //generate likelihood ratio test statistics by minimizing all
 // but the specified parameters (which are fixed) and saving the ratio as result.
 hypotest = {
-    type = "deltanll-hypotest";
+    type = "deltanll_hypotest";
     minimizer = "myminuit";
     background-only = {s = 0.0;};
     signal-plus-background = {};
 };
 
 myminuit = {
-   type = "root-minuit";
+   type = "root_minuit";
 };
 
 main = {
-   type = "plain";
+   type = "plain_run";
    
    //model to use for pseudo data generation and to pass to the producers:
    model = "gaussoverflat";
