* re-organize Configuration handling in plugin system: Configuration & is now const;   usage recording is transparent * introduce links in configuration files. To keep things consistent, this was *not*   done backward-compatibly; fixes #2

--- a/examples/gaussoverflat-mcmc.cfg
+++ b/examples/gaussoverflat-mcmc.cfg
@@ -16,7 +16,7 @@ mcmc_ratio2 = {
 
 minimized_ratio = {
     type = "deltanll_hypotest";
-    minimizer = "myminuit";
+    minimizer = "@myminuit";
     background-only = {s = 0.0;};
     signal-plus-background = {s = 200.0;};
 };
@@ -27,8 +27,8 @@ myminuit = {
 
 main = {
    type = "plain_run";
-   model = "gaussoverflat";
-   producers = ("mcmc_ratio", "mcmc_ratio2", "minimized_ratio");
+   model = "@gaussoverflat";
+   producers = ("@mcmc_ratio", "@mcmc_ratio2", "@minimized_ratio");
    n-events = 50;
    result-file = "gaussoverflat-result.db";
 };
