--- a/examples/gaussoverflat-scan.cfg
+++ b/examples/gaussoverflat-scan.cfg
@@ -11,13 +11,13 @@ mle = {
 };
 
 myminuit = {
-   type = "root_minuit";
+   type = "@root_minuit";
 };
 
 main = {
    type = "scan_run";
-   model = "gaussoverflat";
-   producers = ("mle");
+   model = "@gaussoverflat";
+   producers = ("@mle");
    n-events = 500;
    result-file = "gaussoverflat-result.db";
    
