--- a/examples/gaussoverflat-writer.cfg
+++ b/examples/gaussoverflat-writer.cfg
@@ -5,7 +5,7 @@ mle = {
     type = "mle";
 
     //use minuit as minimizer and source of errors:
-    minimizer = "myminuit";
+    minimizer = "@myminuit";
 
     //write out result for both parameters:
     parameters = ("s", "b");
@@ -23,8 +23,8 @@ myminuit = {
 
 main = {
    type = "plain_run";
-   model = "gaussoverflat";
-   producers = ("mle", "writer");
+   model = "@gaussoverflat";
+   producers = ("@mle", "@writer");
    n-events = 500;
    result-file = "gaussoverflat-result.db";
 };
