--- a/examples/gaussoverflat-mle.cfg
+++ b/examples/gaussoverflat-mle.cfg
@@ -4,7 +4,7 @@ mle = {
     type = "mle";
 
     //use minuit as minimizer and source of errors:
-    minimizer = "myminuit";
+    minimizer = "@myminuit";
 
     //write out result for both parameters:
     parameters = ("s", "b");
@@ -16,8 +16,8 @@ myminuit = {
 
 main = {
    type = "plain_run";
-   model = "gaussoverflat";
-   producers = ("mle");
+   model = "@gaussoverflat";
+   producers = ("@mle");
    n-events = 500;
    result-file = "gaussoverflat-result.db";
 };
