--- a/examples/gaussoverflat.cfg
+++ b/examples/gaussoverflat.cfg
@@ -71,7 +71,7 @@ gaussoverflat = {
 // but the specified parameters (which are fixed) and saving the ratio as result.
 hypotest = {
     type = "deltanll_hypotest";
-    minimizer = "myminuit";
+    minimizer = "@myminuit";
     background-only = {s = 0.0;};
     signal-plus-background = {};
 };
@@ -84,10 +84,10 @@ main = {
    type = "plain_run";
    
    //model to use for pseudo data generation and to pass to the producers:
-   model = "gaussoverflat";
+   model = "@gaussoverflat";
 
    //name of producers to run:
-   producers = ("hypotest");
+   producers = ("@hypotest");
 
    //number of PE to run
    n-events = 500;
