* re-organized database handling: producers now consist of only one class; no additional table class per producer is required * added some high-level tests of the statistical algorithms * added implementation of deltanll_intervals, fixes #19 * added implementation of mcmc_quantiles, fixes #18

--- a/Makefile.rules
+++ b/Makefile.rules
@@ -36,6 +36,8 @@ COMPILE = echo compiling $<; $(CC) -c -Wall -fPIC -O3 $(INCLUDES) $(EXTRA_COMPIL
 #use LIBS to link any executable
 LINK_EXE = echo linking $@; $(CC) -rdynamic -L../lib -ldl -ltheta -llbfgs -lconfig -lsqlite3 $(SQLITE_LIBS) $(BOOST_LIBS) $(EXTRA_LINK_EXE)
 
+LINK_EXE_NOLIBS = echo linking $@; $(CC) -rdynamic $(EXTRA_LINK_EXE)
+
 #use SHARED to link any .so file
 #"-rdynamic" required for correct handling of exceptions
 LINK_SO = echo linking $@; $(CC) -shared -rdynamic $(EXTRA_LINK_SO)
