--- a/examples/CountingExp.cfg
+++ b/examples/CountingExp.cfg
@@ -4,7 +4,7 @@
 // but the specified parameters (which are fixed) and saving the ratio as result.
 hypotest = {
     type = "deltanll_hypotest";
-    minimizer = "myminuit";
+    minimizer = "@myminuit";
     background-only = {s = 0.0;};
     signal-plus-background = {};
 };
@@ -17,10 +17,10 @@ main = {
    type = "plain_run";
    
    //model to use for pseudo data generation and to pass to the producers:
-   model = "countingExp";
+   model = "@countingExp";
 
    //name of producers to run:
-   producers = ("hypotest");
+   producers = ("@hypotest");
 
    //number of PE to run
    n-events = 5000;
