--- a/examples/gaussoverflat-roostats-syst.cfg
+++ b/examples/gaussoverflat-roostats-syst.cfg
@@ -2,7 +2,7 @@
 observables = {
    mass = {
        range = (0.0, 500.0);
-       nbins = 1000;
+       nbins = 100;
    };
 };
      
@@ -26,6 +26,7 @@ parameters = {
 
 
 sig_nominal = {
+    type = "fixed_gauss";
     observable = "mass";
     normalize_to = 1.0;
     mean = 200.0;
@@ -33,6 +34,7 @@ sig_nominal = {
 };
 
 sig_minus = {
+    type = "fixed_gauss";
     observable = "mass";
     normalize_to = 0.9;
     mean = 185.0;
@@ -40,6 +42,7 @@ sig_minus = {
 };
 
 sig_plus = {
+    type = "fixed_gauss";
     observable = "mass";
     normalize_to = 1.1;
     mean = 215.0;
