some documentation changes

--- a/examples/gaussoverflat-roostats-syst.cfg
+++ b/examples/gaussoverflat-roostats-syst.cfg
@@ -49,7 +49,7 @@ sig_plus = {
     width = 50.0;
 };
 
-gaussoverflat = {
+gaussoverflat-syst = {
     //specification of the "mass" observable
     mass = {
         //gaussian signal:
@@ -93,6 +93,37 @@ gaussoverflat = {
     };
 };
 
+gaussoverflat-nosyst = {
+    mass = {
+        signal = {
+            coefficients = ("s");
+            histogram = "@sig_nominal";
+        };
+        
+        //flat background:
+        bkg = {
+            coefficients = ("b");
+            histogram = {
+                type = "fixed_poly";
+                observable = "mass";
+                normalize_to = 1.0;
+                //coefficients of the polynomial, starting with x^0
+                coefficients = [1.0];
+            };
+        };
+    };
+
+    constraints = {
+        c = {
+            type = "gauss";
+            parameter = "b";
+            mean = 1000.0;
+            width = 200.0;
+        };
+    };
+};
+
+
 //generate likelihood ratio test statistics by minimizing all
 // but the specified parameters (which are fixed) and saving the ratio as result.
 hypotest = {
@@ -110,7 +141,8 @@ main = {
    type = "plain_run";
    
    //model to use for pseudo data generation and to pass to the producers:
-   model = "@gaussoverflat";
+   model-pseudodata = "@gaussoverflat-syst";
+   model-producers = "@gaussoverflat-nosyst";
 
    //name of producers to run:
    producers = ("@hypotest");
@@ -124,4 +156,3 @@ main = {
 plugins = {
   files = ("lib/core-plugins.so", "lib/root.so");
 };
-
