* adding configuration for cmake building system * extending test for histogram class * starting implementation of fully automated test suite

--- a/test/test-stat/counting-nobkg-deltanll_intervals.cfg
+++ b/test/test-stat/counting-nobkg-deltanll_intervals.cfg
@@ -8,7 +8,7 @@ deltanll_intervals = {
 };
 
 plugins = {
-    files = ("../lib/core-plugins.so", "../lib/root.so");
+    files = ("../../lib/core-plugins.so", "../../lib/root.so");
 };
 
 writer = {
