--- a/test/test-stat/counting-nobkg-mcmc_quant.cfg
+++ b/test/test-stat/counting-nobkg-mcmc_quant.cfg
@@ -1,6 +1,6 @@
 @include "counting-nobkg.cfg"
 
-mcmc_quant = {
+mcmc = {
     type = "mcmc_quantiles";
     parameter = "Theta";
     quantiles = [0.5, 0.16, 0.84, 0.95];
@@ -8,7 +8,7 @@ mcmc_quant = {
 };
 
 plugins = {
-    files = ("../lib/core-plugins.so");
+    files = ("../../lib/core-plugins.so");
 };
 
 writer = {
@@ -20,7 +20,7 @@ writer = {
 main = {
     type = "plain_run";
     model = "@counting";
-    producers = ("@mcmc_quant", "@writer");
+    producers = ("@mcmc", "@writer");
     log-report = false;
     n-events = 50;
     result-file = "counting-nobkg-mcmc.db";
