--- a/test/test-stat/counting-nobkg-mle.cfg
+++ b/test/test-stat/counting-nobkg-mle.cfg
@@ -9,7 +9,7 @@ mle = {
 };
 
 plugins = {
-    files = ("../lib/core-plugins.so", "../lib/root.so");
+    files = ("../../lib/core-plugins.so", "../../lib/root.so");
 };
 
 writer = {
