* re-write test system in python * add more statistical tests * fix some problems in deltanll and mcmc modules revealed in tests

--- a/test/test-stat/counting-nobkg-deltanll_intervals.cfg
+++ b/test/test-stat/counting-nobkg-deltanll_intervals.cfg
@@ -1,6 +1,6 @@
 @include "counting-nobkg.cfg"
 
-deltanll_intervals = {
+int = {
     type = "deltanll_intervals";
     parameter = "Theta";
     minimizer = {type = "root_minuit";};
@@ -20,8 +20,8 @@ writer = {
 main = {
     type = "plain_run";
     model = "@counting";
-    producers = ("@deltanll_intervals", "@writer");
+    producers = ("@int", "@writer");
     log-report = false;
-    n-events = 500;
+    n-events = 50;
     result-file = "counting-nobkg-deltanll.db";
 };
