--- a/test/test-stat/counting-nobkg-mcmc_quant.cfg
+++ b/test/test-stat/counting-nobkg-mcmc_quant.cfg
@@ -18,7 +18,11 @@ writer = {
 };
 
 main = {
-    type = "plain_run";
+	data-source = {
+    	type = "model_source";
+    	model = "@counting";
+    };    
+    
     model = "@counting";
     producers = ("@mcmc", "@writer");
     log-report = false;
