--- a/test/test-stat/counting-fixedbkg-mle.cfg
+++ b/test/test-stat/counting-fixedbkg-mle.cfg
@@ -19,7 +19,11 @@ writer = {
 };
 
 main = {
-    type = "plain_run";
+    data-source = {
+    	type = "model_source";
+    	model = "@counting";
+    };
+    
     model = "@counting";
     producers = ("@mle", "@writer");
     log-report = false;
