* review tests and test scripts; allow for easy profiling and memcheck support * fix some performance and memory issues discovered with the tests * fix various smaller bugs * cleanup the cmake system * general code cleanup

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,10 +5,17 @@ set(CMAKE_VERBOSE_MAKEFILE, 1)
 option(coverage "build for coverage tests" OFF)
 
 if(coverage)
-message(STATUS "building for coverage test")
-set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} --coverage -O0")
+   message(STATUS "building for coverage test")
+   set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} --coverage -O0")
 endif(coverage)
 
+find_package(Boost COMPONENTS regex program_options filesystem)
+
+if(NOT Boost_FOUND)
+   message(SEND_ERROR "boost not found")
+endif()
+
+include_directories(${Boost_INCLUDE_DIRS})
 include_directories(${CMAKE_SOURCE_DIR})
 
 set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_SOURCE_DIR}/lib)
