--- a/examples/CountingExp-include.cfg
+++ b/examples/CountingExp-include.cfg
@@ -8,36 +8,23 @@
 
     //the parameters of the model are the number of signal and
     // background events after the selection
-    parameters = {
-        s={
-            default = 150.0;
-            range = (0.0, "inf");
-        };
-        b_1={
-            default = 10.0;
-            range = (0.0, "inf");
-        };
-        b_2={
-            default = 80.0;
-            range = (0.0, "inf");
-        };
-    };
+    parameters = ("s", "b_1", "b_2");
 
 countingExp = {
     //specification of the "NEvts" observable
     NEvts = {
         signal = { // "signal" is a name you can choose freely here
-            coefficients = ("s");
+            coefficient-function = {type = "mult"; parameters = ("s");};
             histogram = {
                 type = "fixed_poly";
                 observable = "NEvts";
                 normalize_to = 1.0;
-		coefficients = [1.0];
+		        coefficients = [1.0];
             };
         };
         
         bkg_1 = {
-            coefficients = ("b_1");
+            coefficient-function = {type = "mult"; parameters = ("b_1");};
             histogram = {
                 type = "fixed_poly";
                 observable = "NEvts";
@@ -47,7 +34,7 @@ countingExp = {
         };
 
         bkg_2 = {
-            coefficients = ("b_2");
+            coefficient-function = {type = "mult"; parameters = ("b_2");};
             histogram = {
                 type = "fixed_poly";
                 observable = "NEvts";
@@ -58,22 +45,37 @@ countingExp = {
 
     };
 
-    constraints = {
-        c_bkg_1 = { // the name "c_bkg_1" can be chosen at will
+    parameter-distribution = {
+       type = "product_distribution";
+       distributions = ("@b-dist",
+        {
+            type = "flat_distribution";
+            s = {
+               range = (0.0, "inf");
+               fix-sample-value = 150.0;
+            };
+        });
+    };
+};
+
+b-dist = {
+       type = "product_distribution";
+       distributions = ({
             type = "gauss";
             parameter = "b_1";
+            range = (0.0, "inf");
             mean  = 10.0;
             width =  5.0;
-        };
-        c_bkg_2 = {
+        },
+        {
             type = "gauss";
             parameter = "b_2";
+            range = (0.0, "inf");
             mean  = 80.0;
             width = 20.0;
-        };
-    };
-
+        });
 };
+
 
 plugins = {
   files = ("lib/core-plugins.so", "lib/root.so");
