--- a/examples/CountingExp.cfg
+++ b/examples/CountingExp.cfg
@@ -5,8 +5,11 @@
 hypotest = {
     type = "deltanll_hypotest";
     minimizer = "@myminuit";
-    background-only = {s = 0.0;};
-    signal-plus-background = {};
+    signal-plus-background-distribution = "@countingExp.parameter-distribution";
+    background-only-distribution = {
+        type = "product_distribution";
+    	distributions = ("@b-dist", {type = "delta_distribution"; s = 0.0; });
+    };
 };
 
 myminuit = {
@@ -14,7 +17,10 @@ myminuit = {
 };
 
 main = {
-   type = "plain_run";
+   data-source = {
+   	  type = "model_source";
+   	  model = "@countingExp";
+   };
    
    //model to use for pseudo data generation and to pass to the producers:
    model = "@countingExp";
@@ -30,5 +36,3 @@ main = {
    
    result-file = "SigAndBkg.db";
 };
-
-
