--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,5 +1,4 @@
 file(GLOB libtheta_sources *.cpp)
 add_library(libtheta SHARED ${libtheta_sources})
-target_link_libraries(libtheta m dl config sqlite3 boost_filesystem-mt)
+target_link_libraries(libtheta m dl config sqlite3 ${Boost_LIBRARIES})
 set_property(TARGET libtheta PROPERTY OUTPUT_NAME theta)
-
