--- a/examples/gaussoverflat-include.cfg
+++ b/examples/gaussoverflat-include.cfg
@@ -1,33 +1,21 @@
-// file to be included by other examples which can configure their producers
-// and runs and use this model / plugin settings defined here.
-
-
-    observables = {
-        mass = {
-            range = (500.0, 1500.0);
-            nbins = 200;
-        };
-     };
-
-    //the parameters of the model are the number of signal and
-    // background events after the selection
-    parameters = {
-        s={
-            default = 200.0;
-            range = (0.0, "inf");
-        };
-        b={
-            default = 1600.0;
-            range = (0.0, "inf");
-        };
-    };
+//define one obervable named "mass" with range [500, 1500] and 200 bins.
+observables = {
+   mass = {
+       range = (500.0, 1500.0);
+       nbins = 200;
+   };
+};
+     
+//the parameters of the model are the number of signal and
+// background events after the selection
+parameters = ("s", "b");
 
 gaussoverflat = {
     //specification of the "mass" observable
     mass = {
         //gaussian signal:
         signal = { // "signal" is a name you can choose freely here
-            coefficients = ("s");
+            coefficient-function = {type = "mult"; parameters = ("s");};
             histogram = {
                 type = "fixed_gauss";
                 // In this case, we need to specify the observable here again,
@@ -45,7 +33,7 @@ gaussoverflat = {
         
         //flat background:
         bkg = {
-            coefficients = ("b");
+            coefficient-function = {type = "mult"; parameters = ("b"); };
             histogram = {
                 type = "fixed_poly";
                 observable = "mass";
@@ -56,17 +44,28 @@ gaussoverflat = {
         };
     };
 
-    constraints = {
-        c = { // the name "c" can be chosen at will
-            type = "gauss";
-            parameter = "b";
-            mean = 1000.0;
-            width = 200.0;
-        };
+    parameter-distribution = {
+        type ="product_distribution";
+        distributions =("@b-dist",
+            {
+             type = "flat_distribution";
+             s = {
+                range = (0.0, "inf");
+		fix-sample-value = 200.0;
+            };
+	});
     };
 };
+
+b-dist = {
+             type = "gauss";
+             parameter = "b";
+             mean = 1000.0;
+             width = 200.0;
+             range = (0.0, "inf");
+            };
+
 
 plugins = {
   files = ("lib/core-plugins.so", "lib/root.so");
 };
-
