--- a/examples/gaussoverflat-mcmc_quantiles.cfg
+++ b/examples/gaussoverflat-mcmc_quantiles.cfg
@@ -10,7 +10,10 @@ bayesian_quantiles = {
 };
 
 main = {
-   type = "plain_run";
+   data-source = {
+      type = "model_source";
+      model = "@main.model";
+   };
    model = "@gaussoverflat";
    producers = ("@bayesian_quantiles");
    n-events = 50;
