--- a/examples/gaussoverflat-mle.cfg
+++ b/examples/gaussoverflat-mle.cfg
@@ -15,7 +15,10 @@ myminuit = {
 };
 
 main = {
-   type = "plain_run";
+   data-source = {
+      type = "model_source";
+      model = "@main.model";
+   };
    model = "@gaussoverflat";
    producers = ("@mle");
    n-events = 500;
