--- a/examples/gaussoverflat-nll_scan.cfg
+++ b/examples/gaussoverflat-nll_scan.cfg
@@ -8,7 +8,10 @@ scan = {
 };
 
 main = {
-   type = "plain_run";
+   data-source = {
+      type = "model_source";
+      model = "@main.model";
+   };
    model = "@gaussoverflat";
    producers = ("@scan");
    n-events = 10;
