--- a/examples/gaussoverflat-intervals.cfg
+++ b/examples/gaussoverflat-intervals.cfg
@@ -18,7 +18,10 @@ intervals = {
 };
 
 main = {
-   type = "plain_run";
+   data-source = {
+      type = "model_source";
+      model = "@main.model";
+   };
    model = "@gaussoverflat";
    producers = ("@mle", "@intervals");
    n-events = 50;
