--- a/examples/gaussoverflat-intervals2.cfg
+++ b/examples/gaussoverflat-intervals2.cfg
@@ -17,7 +17,10 @@ intervals2 = {
 };
 
 main = {
-   type = "plain_run";
+   data-source = {
+      type = "model_source";
+      model = "@main.model";
+   };
    model = "@gaussoverflat";
    producers = ("@intervals", "@intervals2");
    n-events = 100;
