--- a/examples/gaussoverflat-mcmc.cfg
+++ b/examples/gaussoverflat-mcmc.cfg
@@ -1,24 +1,34 @@
 @include "gaussoverflat-include.cfg"
 
+delta-s-zero = {
+   type = "delta_distribution";
+   s = 0.0;
+};
+
+delta-s-exp = {
+   type = "delta_distribution";
+   s = 200.0;
+};
+
 mcmc_ratio = {
     type = "mcmc_posterior_ratio";
-    background-only = {s = 0.0;};
-    signal-plus-background = {s = 200.0;};
+    background-only-distribution = { type = "product_distribution"; distributions = ("@b-dist", "@delta-s-zero");};
+    signal-plus-background-distribution = { type = "product_distribution"; distributions = ("@b-dist", "@delta-s-exp"); };
     iterations = 5000;
 };
 
 mcmc_ratio2 = {
     type = "mcmc_posterior_ratio";
-    background-only = {s = 0.0;};
-    signal-plus-background = {s = 200.0;};
+    background-only-distribution = "@mcmc_ratio.background-only-distribution";
+    signal-plus-background-distribution = "@mcmc_ratio.signal-plus-background-distribution";
     iterations = 5000;
 };
 
 minimized_ratio = {
     type = "deltanll_hypotest";
     minimizer = "@myminuit";
-    background-only = {s = 0.0;};
-    signal-plus-background = {s = 200.0;};
+    background-only-distribution = "@mcmc_ratio.background-only-distribution";
+    signal-plus-background-distribution = "@mcmc_ratio.signal-plus-background-distribution";
 };
 
 myminuit = {
@@ -26,7 +36,10 @@ myminuit = {
 };
 
 main = {
-   type = "plain_run";
+   data-source = {
+      type = "model_source";
+      model = "@main.model";
+   };
    model = "@gaussoverflat";
    producers = ("@mcmc_ratio", "@mcmc_ratio2", "@minimized_ratio");
    n-events = 50;
