--- a/examples/gaussoverflat.cfg
+++ b/examples/gaussoverflat.cfg
@@ -8,23 +8,14 @@ observables = {
      
 //the parameters of the model are the number of signal and
 // background events after the selection
-parameters = {
-    s={
-        default = 0.0;
-        range = (0.0, "inf");
-    };
-    b={
-        default = 1600.0;
-        range = (0.0, "inf");
-    };
-};
+parameters = ("s", "b");
 
 gaussoverflat = {
     //specification of the "mass" observable
     mass = {
         //gaussian signal:
         signal = { // "signal" is a name you can choose freely here
-            coefficients = ("s");
+            coefficient-function = {type = "mult"; parameters = ("s");};
             histogram = {
                 type = "fixed_gauss";
                 // In this case, we need to specify the observable here again,
@@ -42,7 +33,7 @@ gaussoverflat = {
         
         //flat background:
         bkg = {
-            coefficients = ("b");
+            coefficient-function = {type = "mult"; parameters = ("b"); };
             histogram = {
                 type = "fixed_poly";
                 observable = "mass";
@@ -53,18 +44,30 @@ gaussoverflat = {
         };
     };
 
-    constraints = {
-        c = { // the name "c" can be chosen at will
-            //multivariate gaussian:
-            type = "gauss";
-            // list of parameters the gaussian depends on:
-            parameter = "b";
-            // means (same order as parameters)
-            mean = 1000.0;
-            // covariance matrix as list of arrays, i.e. 3x3 matrix = ([],[],[]):
-            width = 200.0;
-        };
+    parameter-distribution = {
+        type ="product_distribution";
+        distributions =("@b-dist",
+            {
+             type = "flat_distribution";
+             s = {
+                range = (0.0, "inf");
+		fix-sample-value = 200.0;
+            };
+	});
     };
+};
+
+b-dist = {
+             type = "gauss";
+             parameter = "b";
+             mean = 1000.0;
+             width = 200.0;
+             range = (0.0, "inf");
+            };
+
+delta-s-zero = {
+   type = "delta_distribution";
+   s = 0.0;
 };
 
 //generate likelihood ratio test statistics by minimizing all
@@ -72,8 +75,10 @@ gaussoverflat = {
 hypotest = {
     type = "deltanll_hypotest";
     minimizer = "@myminuit";
-    background-only = {s = 0.0;};
-    signal-plus-background = {};
+    background-only-distribution = {
+         type = "product_distribution";
+         distributions=("@b-dist", "@delta-s-zero");};
+    signal-plus-background-distribution = "@gaussoverflat.parameter-distribution";
 };
 
 myminuit = {
@@ -81,7 +86,11 @@ myminuit = {
 };
 
 main = {
-   type = "plain_run";
+
+   data-source = {
+       type = "model_source";
+       model = "@gaussoverflat";
+   };
    
    //model to use for pseudo data generation and to pass to the producers:
    model = "@gaussoverflat";
