Factoered out Database as plugin; writing sqlite database is now done via the sqlite_database plugin

--- a/examples/CountingExp.cfg
+++ b/examples/CountingExp.cfg
@@ -17,7 +17,7 @@ myminuit = {
 };
 
 main = {
-   data-source = {
+   data_source = {
    	  type = "model_source";
    	  model = "@countingExp";
    };
@@ -34,5 +34,8 @@ main = {
    //set the random seed
    seed     = 10815;
    
-   result-file = "SigAndBkg.db";
+    output_database = {
+        type = "sqlite_database";
+        filename = "SigAndBkg.db";
+    };
 };
