--- a/examples/gaussoverflat-intervals.cfg
+++ b/examples/gaussoverflat-intervals.cfg
@@ -18,12 +18,15 @@ intervals = {
 };
 
 main = {
-   data-source = {
+   data_source = {
       type = "model_source";
       model = "@main.model";
    };
    model = "@gaussoverflat";
    producers = ("@mle", "@intervals");
    n-events = 50;
-   result-file = "gaussoverflat-result-intervals.db";
+   output_database = {
+        type = "sqlite_database";
+        filename = "gaussoverflat-intervals.db";
+    };
 };
