--- a/examples/gaussoverflat-intervals2.cfg
+++ b/examples/gaussoverflat-intervals2.cfg
@@ -17,12 +17,15 @@ intervals2 = {
 };
 
 main = {
-   data-source = {
+   data_source = {
       type = "model_source";
       model = "@main.model";
    };
    model = "@gaussoverflat";
    producers = ("@intervals", "@intervals2");
    n-events = 100;
-   result-file = "gaussoverflat-intervals.db";
+   output_database = {
+        type = "sqlite_database";
+        filename = "gaussoverflat-intervals2.db";
+    };
 };
