--- a/examples/gaussoverflat-mcmc.cfg
+++ b/examples/gaussoverflat-mcmc.cfg
@@ -36,13 +36,16 @@ myminuit = {
 };
 
 main = {
-   data-source = {
+   data_source = {
       type = "model_source";
       model = "@main.model";
    };
    model = "@gaussoverflat";
    producers = ("@mcmc_ratio", "@mcmc_ratio2", "@minimized_ratio");
    n-events = 50;
-   result-file = "gaussoverflat-result.db";
+   output_database = {
+        type = "sqlite_database";
+        filename = "gaussoverflat-mcmc.db";
+    };
 };
 
