--- a/examples/gaussoverflat-mcmc_quantiles.cfg
+++ b/examples/gaussoverflat-mcmc_quantiles.cfg
@@ -10,12 +10,15 @@ bayesian_quantiles = {
 };
 
 main = {
-   data-source = {
+   data_source = {
       type = "model_source";
       model = "@main.model";
    };
    model = "@gaussoverflat";
    producers = ("@bayesian_quantiles");
    n-events = 50;
-   result-file = "gaussoverflat-mcmc_quantiles-result.db";
+   output_database = {
+        type = "sqlite_database";
+        filename = "gaussoverflat-mcmc_quantiles.db";
+   };
 };
