--- a/examples/gaussoverflat-mle.cfg
+++ b/examples/gaussoverflat-mle.cfg
@@ -15,12 +15,15 @@ myminuit = {
 };
 
 main = {
-   data-source = {
+   data_source = {
       type = "model_source";
       model = "@main.model";
    };
    model = "@gaussoverflat";
    producers = ("@mle");
    n-events = 500;
-   result-file = "gaussoverflat-result.db";
+   output_database = {
+        type = "sqlite_database";
+        filename = "gaussoverflat-mle.db";
+    };
 };
