--- a/examples/gaussoverflat-nll_scan.cfg
+++ b/examples/gaussoverflat-nll_scan.cfg
@@ -8,12 +8,15 @@ scan = {
 };
 
 main = {
-   data-source = {
+   data_source = {
       type = "model_source";
       model = "@main.model";
    };
    model = "@gaussoverflat";
    producers = ("@scan");
    n-events = 10;
-   result-file = "gaussoverflat-scan.db";
+   output_database = {
+        type = "sqlite_database";
+        filename = "gaussoverflat-nll_scan.db";
+    };
 };
