--- a/examples/gaussoverflat-writer.cfg
+++ b/examples/gaussoverflat-writer.cfg
@@ -22,9 +22,15 @@ myminuit = {
 };
 
 main = {
-   type = "plain_run";
+   data_source = {
+      type = "model_source";
+      model = "@main.model";
+   };    
    model = "@gaussoverflat";
    producers = ("@mle", "@writer");
    n-events = 500;
-   result-file = "gaussoverflat-result.db";
+   output_database = {
+        type = "sqlite_database";
+        filename = "gaussoverflat-writer.db";
+    };
 };
