--- a/examples/gaussoverflat.cfg
+++ b/examples/gaussoverflat.cfg
@@ -87,7 +87,7 @@ myminuit = {
 
 main = {
 
-   data-source = {
+   data_source = {
        type = "model_source";
        model = "@gaussoverflat";
    };
@@ -101,7 +101,10 @@ main = {
    //number of PE to run
    n-events = 500;
    
-   result-file = "gaussoverflat-result.db";
+   output_database = {
+        type = "sqlite_database";
+        filename = "gaussoverflat.db";
+    };
 };
 
 plugins = {
