--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -7,5 +7,5 @@ else()
    add_library(libtheta SHARED ${libtheta_sources})
 endif()
 
-target_link_libraries(libtheta m dl config sqlite3 ${Boost_LIBRARIES})
+target_link_libraries(libtheta m dl config ${Boost_LIBRARIES})
 set_property(TARGET libtheta PROPERTY OUTPUT_NAME theta)
