--- a/test/test-stat/counting-fixedbkg-mcmc_quant.cfg
+++ b/test/test-stat/counting-fixedbkg-mcmc_quant.cfg
@@ -18,7 +18,7 @@ writer = {
 };
 
 main = {
-	data-source = {
+    data_source = {
     	type = "model_source";
     	model = "@counting";
     };
@@ -27,5 +27,8 @@ main = {
     producers = ("@mcmc", "@writer");
     log-report = false;
     n-events = 50;
-    result-file = "counting-fixedbkg-mcmc.db";
+    output_database = {
+        type = "sqlite_database";
+        filename = "counting-fixedbkg-mcmc.db";
+    };
 };
