--- a/test/test-stat/counting-fixedbkg-mle.cfg
+++ b/test/test-stat/counting-fixedbkg-mle.cfg
@@ -19,7 +19,7 @@ writer = {
 };
 
 main = {
-    data-source = {
+    data_source = {
     	type = "model_source";
     	model = "@counting";
     };
@@ -28,5 +28,8 @@ main = {
     producers = ("@mle", "@writer");
     log-report = false;
     n-events = 500;
-    result-file = "counting-fixedbkg-mle.db";
+    output_database = {
+        type = "sqlite_database";
+        filename = "counting-fixedbkg-mle.db";
+    };
 };
