--- a/test/test-stat/counting-nobkg-mcmc_quant.cfg
+++ b/test/test-stat/counting-nobkg-mcmc_quant.cfg
@@ -18,7 +18,11 @@ writer = {
 };
 
 main = {
-	data-source = {
+    output_database = {
+        type = "sqlite_database";
+        filename = "counting-nobkg-mcmc.db";
+    };
+    data_source = {
     	type = "model_source";
     	model = "@counting";
     };    
@@ -27,5 +31,4 @@ main = {
     producers = ("@mcmc", "@writer");
     log-report = false;
     n-events = 50;
-    result-file = "counting-nobkg-mcmc.db";
 };
