--- a/plugins/CMakeLists.txt
+++ b/plugins/CMakeLists.txt
@@ -1,9 +1,12 @@
 file(GLOB plugin_sources *.cpp)
 add_library(plugin MODULE ${plugin_sources})
 
+target_link_libraries(plugin sqlite3)
+
 add_custom_command(TARGET plugin POST_BUILD COMMAND mv ${CMAKE_LIBRARY_OUTPUT_DIRECTORY}/libplugin.so ${CMAKE_LIBRARY_OUTPUT_DIRECTORY}/core-plugins.so)
 
 #install(TARGETS plugin DESTINATION ${install_dir})
 #install(SCRIPT rename_plugin.cmake)
-#target_link_libraries(plugin)
+
+
 
