--- a/test/test-stat/counting-nobkg-mle.cfg
+++ b/test/test-stat/counting-nobkg-mle.cfg
@@ -19,7 +19,11 @@ writer = {
 };
 
 main = {
-	data-source = {
+    output_database = {
+        type = "sqlite_database";
+        filename = "counting-nobkg-mle.db";
+    };
+    data_source = {
     	type = "model_source";
     	model = "@counting";
     };
@@ -28,5 +32,4 @@ main = {
     producers = ("@mle", "@writer");
     log-report = false;
     n-events = 500;
-    result-file = "counting-nobkg-mle.db";
 };
